# ai-pokedex-rag-evaluation

./: .gitignore  README.md  pyproject.toml
config/: logging.yaml
config/assistants/: assistant_v1.yaml
evaluation_set/: evaluation_set_2025_06_01_18_05_26.json  evaluation_set_2025_06_14_11_57_23.json
raw_data/all/: index.html  index.md  metadata.json
raw_data/archaludon/: index.html  index.md  metadata.json
raw_data/baxcalibur/: index.html  index.md  metadata.json
raw_data/chi-yu/: index.html  index.md  metadata.json
raw_data/chien-pao/: index.html  index.md  metadata.json
raw_data/cloyster/: index.html  index.md  metadata.json
raw_data/dewgong/: index.html  index.md  metadata.json
raw_data/dipplin/: index.html  index.md  metadata.json
raw_data/dodrio/: index.html  index.md  metadata.json
raw_data/doduo/: index.html  index.md  metadata.json
raw_data/drowzee/: index.html  index.md  metadata.json
raw_data/farfetchd/: index.html  index.md  metadata.json
raw_data/fezandipiti/: index.html  index.md  metadata.json
raw_data/gastly/: index.html  index.md  metadata.json
raw_data/gengar/: index.html  index.md  metadata.json
raw_data/gholdengo/: index.html  index.md  metadata.json
raw_data/gimmighoul/: index.html  index.md  metadata.json
raw_data/gouging-fire/: index.html  (+2 more)
results/: evaluation_report_2025_06_01_20_59_36.json  evaluation_report_2025_06_01_21_04_04.json  evaluation_report_2025_06_01_21_05_47.json  evaluation_report_2025_06_01_21_10_48.json  evaluation_report_2025_06_01_21_12_17.json  evaluation_report_2025_06_14_12_08_32.json
(+88 files in other folders)
